// To generate from service.proto file, run from project root directory:
// $ protoc --go_out=./internal/pkg/user/ --go-grpc_out=require_unimplemented_servers=false:./internal/pkg/user/ ./internal/pkg/user/service.proto
syntax = "proto3";
option go_package = "grpc/service";
package service;

message CreateRequest {
    string username = 1;
    string password = 2;
}

message SecureResponse {
    string id = 1;
    string username = 2;
    uint32 created_at = 3;
}

message GetByUsernameRequest {
    string username = 1;
}

message Response {
    string id = 1;
    string username = 2;
    string password = 3;
    uint32 created_at = 4;
}

service Service {
    rpc Create (CreateRequest) returns (SecureResponse);
    rpc GetByUsername (GetByUsernameRequest) returns (Response);
}
